# hdbscan-rs

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  README_PYTHON.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benches/: benchmark.rs
examples/: basic_usage.rs  bench.rs  bench_boruvka.rs  bench_boruvka_vs_prim.rs  bench_core.rs  bench_dist.rs  bench_multidim.rs  bench_quick.rs  bench_runner.rs  bench_wasm_compare.rs  boruvka_profile.rs  knn_bench.rs  precomputed_distance.rs  profile_fused.rs  profile_phases.rs  profile_pipeline.rs  profile_runner.rs  python_usage.py
src/: ball_tree.rs  bench_utils.rs  centers.rs  cluster_selection.rs  condensed_tree.rs  core_distance.rs  error.rs  hdbscan.rs  kdtree.rs  kdtree_bounded.rs  knn_heap.rs  labels.rs  lib.rs  linkage.rs  membership.rs  outlier.rs  params.rs  prediction.rs  python.rs  simd_distance.rs  spatial_tree.rs  types.rs  union_find.rs  wasm.rs
src/distance/: chebyshev.rs  cosine.rs  euclidean.rs  manhattan.rs  minkowski.rs  mod.rs  precomputed.rs
src/mst/: boruvka.rs  dual_tree_boruvka.rs  mod.rs  prim.rs
tests/: bench_wasm.mjs  bench_wasm_vs_native.sh  generate_fixtures.py  perf_comparison.py  test_python.py
tests/fixtures/: all_identical_n30_mcs5.json  blobs_n150_c3_manhattan_mcs5.json  blobs_n300_c4_mcs10_eom.json  blobs_n300_c4_mcs10_eps1.json  blobs_n300_c4_mcs10_leaf.json  blobs_n300_c4_mcs20_eom.json  blobs_n300_c4_mcs5_eom.json  circles_n300_mcs10_eom.json  circles_n300_mcs10_leaf.json  circles_n300_mcs5_eom.json  circles_n300_mcs5_leaf.json  duplicates_n80_mcs5_eom.json  moons_n200_mcs10_eom.json  moons_n200_mcs10_leaf.json  moons_n200_mcs10_ms5_eom.json  moons_n200_mcs15_eom.json  moons_n200_mcs15_leaf.json  moons_n200_mcs5_eom.json  moons_n200_mcs5_leaf.json  perf_blobs_n10000_c5_mcs10.json  perf_blobs_n1000_c5_mcs10.json  perf_blobs_n2000_c5_mcs10.json  perf_blobs_n5000_c5_mcs10.json  perf_blobs_n500_c5_mcs10.json  precomputed_blobs_n100_c3_mcs5.json  single_blob_n100_mcs5_allow.json  single_blob_n100_mcs5_no_allow.json  varying_density_n200_mcs10_eom.json  varying_density_n200_mcs10_leaf.json
tests/integration/: cross_impl.rs  edge_cases.rs  large_scale.rs  mod.rs  property_tests.rs  two_clusters.rs
