[package]
name = "hdbscan-rs"
version = "0.3.0"
edition = "2021"
description = "HDBSCAN clustering algorithm, compatible with scikit-learn"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JasonLovesDoggo/hdbscan-rs"
keywords = ["clustering", "hdbscan", "machine-learning", "density-based", "unsupervised"]
categories = ["algorithms", "science"]

[lib]
name = "hdbscan_rs"
crate-type = ["lib", "cdylib"]

[dependencies]
ndarray = "0.16"
num-traits = "0.2"
thiserror = "2"
ordered-float = "4"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
numpy = { version = "0.24", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "benchmark"
harness = false

[profile.release]
lto = "fat"
strip = true
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s"
panic = "abort"

[features]
default = []
serde = ["dep:serde"]
python = ["dep:pyo3", "dep:numpy"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]
